<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="115dp">
        <EditText
            android:id="@+id/Enter_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Enter_ID"
            android:layout_marginBottom="50dp"/>
        <EditText
            android:id="@+id/Enter_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
            android:hint="@string/Enter_password"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/wrong_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:text="@string/wrong_password"
            android:layout_gravity="center_horizontal"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:text="@string/login"
            android:onClick="login"
            android:layout_gravity="center_horizontal" />
            
        </LinearLayout>
</RelativeLayout>
