<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.khaled.takequiz.Quizlist_Student">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quizlist"
        android:layout_gravity="center_horizontal"
        android:textSize="40dp"
        android:layout_marginBottom="30dp"
       />
<TableLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="2">
     <TableRow>
         
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/quiz"
             android:layout_gravity="left"
             android:textSize="30dp"
             />

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/deadline"
             android:layout_gravity="right"
             android:textSize="30dp"
             android:layout_column="30" />

     </TableRow>


</TableLayout>
</LinearLayout>
</RelativeLayout>
