<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.khaled.takequiz.StudentHome">
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:layout_width="fill_parent"
        android:textSize="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="listquiz"
        android:text="@string/listofquiz"/>


    <Button
        android:layout_width="fill_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:text="@string/result"
        android:onClick="openresults"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/statistics"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="60dp"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:layout_gravity="right"
        android:text="Log Out"
        android:onClick="getout"/>
</LinearLayout>
</RelativeLayout>
